# backend_on_rust

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20230506155117_users.down.sql  20230506155117_users.up.sql  20230506155124_certificates.down.sql  20230506155124_certificates.up.sql  20230506155128_questions.down.sql  20230506155128_questions.up.sql  20230506155606_reimbursements.down.sql  20230506155606_reimbursements.up.sql
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-03-02-182445_Users/: down.sql  up.sql
migrations/2023-03-02-182514_Certificates/: down.sql  up.sql
migrations/2023-03-02-182535_Questions/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs  user_controller.rs
src/db/: connection.rs  mod.rs  schema.rs
src/middleware/: auth.rs
src/models/: admin.rs  certificate.rs  mod.rs  user.rs
src/routes/: mod.rs  not_found.rs  user_routes.rs
