[package]
name = "reimbursement_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
ulid = "1.0.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
