[package]
name = "reimbursement_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "1.1.1"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
dotenv = "0.15.0"
ulid = "1.0.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
bcrypt = "0.14.0"
jsonwebtoken = "8.2.0"
futures-util = "0.3.28"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres","macros","chrono"] }
